# gossip

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  REPORT.md  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml  justfile  test_vectors.json
.github/workflows/: docker.yml  release.yml  rust.yml  typescript.yml
crates/gossipd/: Cargo.toml
crates/gossipd/src/: config.rs  event_log.rs  lib.rs  main.rs  membership.rs  server.rs  storage.rs  sync.rs
crates/infernode/: Cargo.toml
crates/infernode/src/: circuit.rs  config.rs  lib.rs  main.rs  onion.rs  relay.rs
crates/prober/: Cargo.toml
crates/prober/src/: challenge.rs  config.rs  lib.rs  main.rs  receipt.rs  scheduler.rs
crates/routerd/: Cargo.toml
crates/routerd/src/: config.rs  lib.rs  main.rs  provider.rs  router.rs  scoring.rs  terrain.rs
crates/terrain-gossip-core/: Cargo.toml
crates/terrain-gossip-core/src/: canonical.rs  crypto.rs  error.rs  lib.rs  test_vectors.rs  types.rs
crates/terrain-gossip-net/: Cargo.toml
crates/terrain-gossip-net/src/: circuit.rs  crypto.rs  framing.rs  lib.rs  peer.rs  transport.rs
docs/: rfc-0001.md
proto/: terrain_gossip.proto
