[workspace]
resolver = "2"
members = [
    "crates/terrain-gossip-core",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/your-org/gossip"
rust-version = "1.75"

[workspace.dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
postcard = { version = "1.0", features = ["alloc"] }

# Cryptography
blake3 = "1.5"
ed25519-dalek = { version = "2.1", features = ["serde", "rand_core"] }
x25519-dalek = { version = "2.0", features = ["serde"] }
rand = "0.8"

# Async runtime (for future daemons)
tokio = { version = "1.35", features = ["full"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Testing
hex = "0.4"
serde_json = "1.0"
