[package]
name = "infernode"
version = "0.1.0"
edition = "2021"
description = "TerrainGossip Inference Node Daemon"
license = "MIT OR Apache-2.0"

[[bin]]
name = "infernode"
path = "src/main.rs"

[dependencies]
terrain-gossip-core = { path = "../terrain-gossip-core" }
terrain-gossip-net = { path = "../terrain-gossip-net" }

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
postcard = { workspace = true }

# Crypto
blake3 = { workspace = true }
rand = { workspace = true }
chacha20poly1305 = { workspace = true }

# CLI
clap = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Utilities
thiserror = { workspace = true }
hex = { workspace = true }
parking_lot = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
