[package]
name = "prober"
version = "0.1.0"
edition = "2021"
description = "TerrainGossip Prober Daemon"
license = "MIT OR Apache-2.0"

[[bin]]
name = "prober"
path = "src/main.rs"

[dependencies]
terrain-gossip-core = { path = "../terrain-gossip-core" }
terrain-gossip-net = { path = "../terrain-gossip-net" }

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
postcard = { workspace = true }

# Crypto
blake3 = { workspace = true }
rand = { workspace = true }
ed25519-dalek = { workspace = true }

# CLI
clap = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Utilities
thiserror = { workspace = true }
hex = { workspace = true }
parking_lot = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
