[package]
name = "terrain-gossip-core"
description = "Core types, canonical encoding, and cryptographic primitives for TerrainGossip protocol"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
postcard = { workspace = true }
blake3 = { workspace = true }
ed25519-dalek = { workspace = true }
x25519-dalek = { workspace = true }
rand = { workspace = true }
thiserror = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
